# experimental-distill

./: .gitignore  CLASSIFICATION_EVALUATION.md  CLASSIFICATION_EVAL_REFACTOR.md  CLEANUP_COMPLETE.md  DATA_FILES.md  Dockerfile  Dockerfile.mac  GUIDE.md  HOW_TO_RUN.md  LABEL_FORMAT_FIX.md  LOSS_AND_EVALUATION.md  MODIFICATIONS.md  Makefile  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_SUMMARY.md  SCHEMA_FIX.md  SETUP.md  SPLITTING_STRATEGY.md  TESTING_SUMMARY.md  TEST_SET_FIX.md  THREE_CATEGORY_SYSTEM.md  TOKENIZATION_FIX.md  UV_SETUP.md  analysis_json_to_label.md  cloud_train.py  docker-compose.yml  my_notes.txt  prepare_dataset.py  pyproject.toml  quick_test.sh  requirements.mac.txt  requirements.txt  run_tests.sh  setup.sh  test_dataset.py  test_pipeline.py  train.py  train_mac.py  vertex_ai_submit.sh
docs/: COMMANDS.md  DOCKER_USAGE.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MAC_TRAINING_GUIDE.md  OPTIMIZATION_SUMMARY.md  QUICK_START.md  README_QUICK_START.md  RESEARCH_PROCESS.md
outputs/mock_model/: mock_model.txt  mock_tokenizer.txt
prompts/: baseline.txt  gepa_gemini_v1.txt
scripts/: __init__.py  prepare_dataset.py  split_dataset.py  test_classification_eval.py  test_label_extraction.py  test_model.py
training/: ARCHITECTURE.md  __init__.py  base_trainer.py  classification_evaluator.py  cloud_entry.py  cloud_train.py  cloud_trainer.py  config.py  evaluation.py  local_entry.py  local_trainer.py  mock_entry.py  mock_trainer.py  train.py  train_mac.py
